<resources>
    <string name="app_name">AllInOne</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Register -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="or">Or sign up using</string>
    <string name="signup">Sign Up</string>
    <string name="emptyField">"Please fill out*"</string>

    <!-- TODO: Alert Dialog -->
    <string name="progressLoading">Loading…</string>
</resources>