<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signupViewModel"
            type="com.beginnerpurpose.allinone.viewmodels.register.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.register.SignUp"
        android:id="@+id/signupLayout"
        android:paddingHorizontal="10dp"
        android:background="@drawable/bg_bottom_left">

        <LinearLayout
            android:id="@+id/signupInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.10"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/username"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/text_register"
                    android:textColorHint="@color/text_register"
                    app:boxStrokeColor="@color/stroke"
                    app:errorEnabled="true"
                    app:counterMaxLength="16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        checkEmptyField="@{usernameeLayout}"
                        android:fontFamily="sans-serif-medium"
                        android:text="@={signupViewModel.MUsername}"
                        android:maxLength="16"
                        android:textColor="@color/text_register"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passworddLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/text_register"
                    android:textColorHint="@color/text_register"
                    app:boxStrokeColor="@color/stroke"
                    app:endIconTint="@color/ic_register"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        checkEmptyField="@{passworddLayout}"
                        android:fontFamily="sans-serif-medium"
                        android:text="@={signupViewModel.MPassword}"
                        android:maxLength="16"
                        android:textColor="@color/text_register"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstnameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/firstname"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/text_register"
                    android:textColorHint="@color/text_register"
                    app:boxStrokeColor="@color/stroke"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupFirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        checkEmptyField="@{firstnameLayout}"
                        android:fontFamily="sans-serif-medium"
                        android:text="@={signupViewModel.MFirstname}"
                        android:textColor="@color/text_register"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastnameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/lastname"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/text_register"
                    android:textColorHint="@color/text_register"
                    app:boxStrokeColor="@color/stroke"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        checkEmptyField="@{lastnameLayout}"
                        android:fontFamily="sans-serif-medium"
                        android:text="@={signupViewModel.MLastname}"
                        android:textColor="@color/text_register"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/signupButton"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:onClick="@{() -> signupViewModel.signPressSignUpButton()}"
            android:background="@drawable/custom_button_first"
            app:layout_constraintStart_toStartOf="@id/signupInfoLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/signup"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/signupInfoLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>